assets/css/style.css
/* ... */
* {
  margin: 0px;
  padding: 0px;
}

html,
body {
  width: 100vw;
  height: 100vh;
  font-family: "Inter", serif;
  background-color: var(--bg-primary);
  overflow-x: hidden;
  color: var(--text-secondary);
  
  @media only screen and (max-width: 800px) {
    width: 100%;
    height: 100%;
    overflow: hidden;
  }
}

div.center {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  
  @media only screen and (max-width: 800px) {
    padding: var(--space-md);
    padding-top: calc(48px + var(--space-md));
    box-sizing: border-box;
    height: 100vh;
    margin-top: 0;
  }
}

div.background {
  background-image: url("/img/background.jpg");
  background-position: center;
  filter: saturate(0%);
  position: absolute;
  height: 100%;
  width: 100%;
  z-index: 0;
  left: 0;
  top: 0;
}

div.container {
  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.6);
  border: 1px solid var(--border);
  background-color: var(--bg-primary);
  border-radius: var(--radius);
  padding: var(--space-lg);
  z-index: 1;
  max-width: 90%;

  @media only screen and (max-width: 800px) {
    width: 100%;
    max-width: 100%;
    margin: 0;
    box-sizing: border-box;
  }
}

div.details {
  flex-direction: row;
  display: flex;

  & > img {
    width: 128px;
    height: 128px;
    aspect-ratio: 1 / 1;
    border-radius: var(--radius);
    pointer-events: none;
    border: 1px solid var(--border);
  }

  & > div.about {
    display: flex;
    margin-left: var(--space-lg);
    flex-direction: column;
    justify-content: center;

    & > h1 {
      color: var(--text-primary);
    }

    & > h2 {
      font-weight: 200;
      color: var(--text-muted);
    }
  }

  @media only screen and (max-width: 800px) {
    flex-direction: column;
    align-items: center;
  }
}

div.about {
  @media only screen and (max-width: 800px) {
    align-items: center;
    margin-top: var(--space-md);
    margin-left: 0px !important;
    width: 100%;

    & > h1 {
      @media only screen and (max-width: 475px) {
        font-size: 20px;
      }
    }

    & > h2 {
      @media only screen and (max-width: 475px) {
        font-size: 15px;
      }
    }
  }
}

ul.socials {
  display: flex;
  list-style: none;
  margin-top: var(--space-md);
  width: 100%;

  & > li {
    display: inline-block;
    margin-right: var(--space-sm);

    & > a {
      display: flex;
      align-items: center;
      justify-content: center;
      background-color: var(--bg-secondary);
      border: 1px solid var(--border);
      text-decoration: none;
      border-radius: var(--radius-sm);
      color: var(--text-secondary);
      width: 32px;
      height: 32px;
      transition: all 0.2s ease;

      & > img {
        width: 16px;
        transition: filter 0s;
      }

      &:hover {
        background-color: var(--bg-tertiary);
        border-color: var(--accent-blue);
        color: var(--accent-blue);
      }

      &:hover > img {
        filter: brightness(0) saturate(100%) invert(70%) sepia(37%) saturate(4975%) hue-rotate(200deg) brightness(106%) contrast(101%);
      }
    }
  }

  @media only screen and (max-width: 800px) {
    flex-direction: column;
    margin-top: var(--space-md) !important;

    & > li {
      margin-right: 0px;

      &:not(:last-child) {
        margin-bottom: var(--space-sm);
      }

      & > a {
        width: 100%;
        height: 48px;
      }
    }
  }
}

span.label {
  display: none;

  @media only screen and (max-width: 800px) {
    display: inline-block;
    margin-left: 8px;
  }
}

div.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: var(--bg-primary);
  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
  border-bottom: 1px solid var(--border);
  position: fixed;
  height: 48px;
  width: 100%;
  z-index: 1000;
  left: 0;
  top: 0;

  & > div.left {
    margin-left: var(--space-sm);

    & > h1 {
      font-size: 20px;

      & > a {
        text-decoration: none;
        color: var(--text-primary);
      }
    }
  }

  & > div.right {
    margin-right: var(--space-sm);

    & > ul.pages {
      margin-left: 0px;
      list-style: none;
      display: flex;

      & > li:not(:last-child) {
        margin-right: var(--space-sm);
      }

      & > li > a {
        display: flex;
        align-items: center;
        justify-content: center;
        background-color: var(--bg-secondary);
        border: 1px solid var(--border);
        font-size: 0.9rem;
        text-decoration: none;
        border-radius: var(--radius-sm);
        color: var(--text-secondary);
        width: 72px;
        height: 32px;
        transition: all 0.2s ease;

        &:hover {
          background-color: var(--bg-tertiary);
          border-color: var(--accent-blue);
          color: var(--accent-blue);
        }

        @media only screen and (max-width: 475px) {
          font-size: 12px;
          height: 28px;
          width: 64px;
        }
      }
    }
  }
}
/* ... */

